<resources>
    <string name="app_name">Miau Mart</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="foods">Foods</string>
    <string name="medicines">Medicines</string>
    <string name="accessories">Accessories</string>
    <string name="toys">Toys</string>
    <string name="search">Search</string>
    <string name="products_image">products image</string>
    <string name="loading">Loading …</string>
    <string name="product_details">Product Details</string>
    <string name="back_layout">back layout</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="description_products">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
        culpa qui officia deserunt mollit anim id est laborum. Suspendisse potenti.
        Morbi mollis tellus ac sapien. Nunc eget nunc vitae nisi aliquam dignissim.
        Aliquam eleifend mi in nulla posuere sollicitudin aliquam. Ut tellus dolor, dapibus eget,
        elementum vel,cursus eleifend, elit. Aenean auctor wisi et urna.</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="description">Description</string>
    <string name="less">less</string>
    <string name="plus">plus</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="icon_add_profile_image">Icon add profile image</string>
    <string name="preview_of_profile_image">Preview of profile image</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="profile_image">Profile image</string>
    <string name="delete_product_from_cart">Delete product from cart</string>
    <string name="my_cart">My Cart 🛍️</string>
    <string name="total">Total:</string>
    <string name="to_buy">To Buy</string>
    <string name="you_have_no_items_in_your_shopping_cart">You have no items in your shopping cart</string>
    <string name="the_cart_is_empty">The cart is empty</string>
    <string name="icon_to_open_purchase_design">Icon to open purchase design</string>
    <string name="icon_to_close_purchase_design">Icon to close purchase design</string>
    <string name="image_of_the_selected_product">Image of the selected product</string>
    <string name="you_don_t_have_favorite_products">You don\'t have favorite products</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_profile">My Profile 😁</string>
    <string name="history">History</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="sign_off">Sign off</string>
    <string name="delete_history">Delete history</string>
    <string name="quantity">Quantity:</string>
    <string name="your_history_is_empty">Your history is empty</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="search_here">Search here …</string>
    <string name="product_not_found">Product not found</string>
    <string name="you_don_t_have_internet_access">You don\'t have internet access</string>
    <string name="network_error">Network error</string>
</resources>