<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Register">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark_jungle_green">

            <androidx.cardview.widget.CardView
                android:id="@+id/back_layout"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/rangoon_green"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/back_layout"
                    android:src="@drawable/ic_back" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/open_gallery"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/etchart_dam"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/icon_add_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_photo"
                    android:contentDescription="@string/icon_add_profile_image" />

                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    android:contentDescription="@string/preview_of_profile_image" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_app"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/app_name"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input_background"
                android:drawableEnd="@drawable/ic_user"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@color/gainsboro"
                android:textSize="16sp"
                android:autofillHints="name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input_background"
                android:drawableEnd="@drawable/ic_password"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/gainsboro"
                android:textSize="16sp"
                android:autofillHints="password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input_background"
                android:drawableEnd="@drawable/ic_password"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/gainsboro"
                android:textSize="16sp"
                android:autofillHints="password" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/fire_engine_red"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/register"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/already_have_an_account"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_medium"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/login"
                    android:textColor="@color/fire_engine_red"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>