<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="login"
            type="com.daniel.miaumart.ui.viewModels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.Login">

        <androidx.cardview.widget.CardView
            android:id="@+id/back_layout"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/rangoon_green"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:contentDescription="@string/back_layout"
                android:src="@drawable/ic_back" />

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="80dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/welcome_back"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/login_to_continue"
                        android:textColor="@color/gainsboro"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_app" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/app_name"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="wrap_content"
                    android:layout_height="53dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="name"
                    android:background="@drawable/input_background"
                    android:drawableEnd="@drawable/ic_user"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:minWidth="380dp"
                    android:padding="10dp"
                    android:text="@={login.username}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gainsboro"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="wrap_content"
                    android:layout_height="53dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="password"
                    android:background="@drawable/input_background"
                    android:drawableEnd="@drawable/ic_password"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minWidth="380dp"
                    android:padding="10dp"
                    android:text="@={login.password}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gainsboro"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/login_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/fire_engine_red"
                    android:fontFamily="@font/roboto_medium"
                    android:minWidth="380dp"
                    android:onClick="@{()->login.login()}"
                    android:text="@string/login"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/redirect_to_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_medium"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="@string/register"
                        android:textColor="@color/fire_engine_red"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/no_internet_access_layout_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/rangoon_green"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/icon_wifi_off"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/you_don_t_have_internet_access"
                android:src="@drawable/ic_wifi_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/you_don_t_have_internet_access"
                android:textColor="@color/gainsboro"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_wifi_off"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>